--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.38.0",
     "clsx": "^2.0.0",
+    "firebase": "^12.6.0",
     "lucide-react": "^0.294.0",
     "phaser": "^3.70.0",
     "react": "^18.2.0",
