--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "phaser": "^3.70.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.10.1",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
