updated og meta fixes

--- a/vercel.json
+++ b/vercel.json
@@ -17,6 +17,19 @@
       "destination": "/index.html"
     }
   ],
+  "redirects": [
+    {
+      "source": "/:path*",
+      "has": [
+        {
+          "type": "host",
+          "value": "www.crackwits.com"
+        }
+      ],
+      "destination": "https://crackwits.com/:path*",
+      "permanent": true
+    }
+  ],
   "headers": [
     {
       "source": "/game/Christmas25/(.*)",
